# VulkanRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  buffer.hpp  command.cpp  command.hpp  device.cpp  device.hpp  main.cpp  memory.hpp  notes  pipeline.cpp  pipeline.hpp  pipeline_settings.hpp  queues.hpp  render_api.cpp  render_api.hpp  shader.hpp  uniform_buffer.hpp  utils.cpp  utils.hpp  vertex_buffer.hpp  vulkan_defaults.hpp  window.cpp  window.hpp
shaders/: frag.glsl  frag.spv  vert.glsl  vert.glsl.simple  vert.spv
src/: CMakeLists.txt  command.cpp  command.hpp  debug.hpp  defaults.hpp  descriptor_sets.hpp  device.hpp  device_api.cpp  device_api.hpp  framebuffer.hpp  handle.hpp  image_properties.hpp  instance.cpp  instance.hpp  memory.hpp  pipeline.hpp  pipeline_settings.hpp  queues.hpp  render_pass.hpp  render_settings.hpp  semaphores.hpp  shader.hpp  uniform_buffer.hpp  utils.hpp  vertex_buffer.hpp  vulkan_defaults.hpp
src/buffers/: descriptor_sets.hpp  device_buffer.cpp  device_buffer.hpp  image_buffer.hpp  uniform_buffer.hpp  vertex_buffer.hpp
test/: CMakeLists.txt  containers.hpp  frag.glsl  main.cpp  vert.glsl  vert.spv  window.cpp  window.hpp
